fixed up the leftContent stretching and removed events from emailPreviews

--- a/client/components/Settings/Communications/Recalls/RecallsItem/styles.scss
+++ b/client/components/Settings/Communications/Recalls/RecallsItem/styles.scss
@@ -110,7 +110,7 @@ $dheight: 30px;
 
 .topRow {
   position: relative;
-  top: -24px;
+  top: -25px;
 }
 
 .bottomRow {
