--- a/client/components/Settings/Communications/Recalls/styles.scss
+++ b/client/components/Settings/Communications/Recalls/styles.scss
@@ -36,7 +36,7 @@
   align-items: center;
   justify-content: center;
   margin-left: 0;
-  width: 85%;
+  width: 80%;
   position: relative;
   top: -54px;
   float: right;
