--- a/client/components/Settings/Communications/Reminders/RemindersItem/styles.scss
+++ b/client/components/Settings/Communications/Reminders/RemindersItem/styles.scss
@@ -97,7 +97,7 @@ $dheight: 30px;
 
 .topRow {
   position: relative;
-  top: -24px;
+  top: -25px;
 }
 
 .bottomRow {
@@ -137,7 +137,7 @@ $small-icon-width: 20px;
   color: white;
   background-color: $primary-gray;
   > i {
-    font-size: 0.6em;
+    font-size: 0.8em !important;
   }
 }
 
