--- a/client/components/Settings/Shared/TouchPointItem/styles.scss
+++ b/client/components/Settings/Shared/TouchPointItem/styles.scss
@@ -8,6 +8,25 @@
   cursor: pointer;
 }
 
+.gridSection {
+  display: flex;
+  flex-direction: row;
+}
+
+.leftSection {
+  width: 175px;
+  display: flex;
+}
+
+.flexSection {
+  flex: 1;
+}
+
+.rightSection {
+  width: 10%;
+  min-width: 25px;
+}
+
 .linesBox {
   margin: 10px 0;
   height: 120px;
@@ -39,11 +58,13 @@
 
 .toggleCol {
   padding-top: 4px;
+  width: 25px;
 }
 
 .labelCol {
   padding-top: 4px;
-  padding-right: 20px;
+  padding-right: 10px;
+  flex: 1;
 }
 
 .reminderLabel {
@@ -63,7 +84,7 @@
 }
 
 .connectionLine {
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
